# PolyPop-Spotify-Plugin

./: .gitignore  License.txt  MakeInstaller.nsi  Readme.md  Spotify.lua  Spotify.text  Spotify.uix  plugin.json  ppspotify.py  ppspotify.spec  pyproject.toml  server.py  setup.pug  utils.py
Spotify/: Spotify.lua  Spotify.uix  Spotify_Thumbnail.dds
backend/: server.py  utils.py
ppspotify/: pyproject.toml
ppspotify/ppspotify/: context.py  ppspotify.py  web_app.py
ppspotify/ppspotify/backend/: utils.py
ppspotify/ppspotify/utilities/: context.py  web_app.py
ppspotify/ppspotify/utils/: server.py  utils.py
ppspotify/tests/: test_ppspotify.py
static/: setup.js  styles.css
templates/: logged_in.html  logged_in.pug  setup.html  setup.js  setup.pug  styles.css
