[tool.poetry]
name = "ppspotify"
version = "1.0.1"
description = "PolyPop Spotify Plugin Backend"
authors = ["Jabbey92 <92jbach@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
spotipy = "^2.19.0"
loguru = "^0.6.0"
Jinja2 = "^3.1.2"
mutagen = "^1.45.1"

[tool.poetry.scripts]
ppspotify = "ppspotify.ppspotify:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
